fix: grid alignment

--- a/src/styles/_component-checklist.scss
+++ b/src/styles/_component-checklist.scss
@@ -11,6 +11,6 @@
   }
   th:nth-child(2) {
     // 5 columns
-    width: 43%;
+    width: 41.6%%;
   }
 }
